添加物品传感